<resources>
    <string name="app_name">Math</string>

    <!-- Titles -->
    <string name="Home">الرئيسية</string>
    <string name="Dashboard">تقييمك</string>
    <string name="Exo">التمرين</string>
    <string name="Start">ابدء</string>
    <string name="Stop">توقف</string>
    <string name="Hint">ملخص الوحدة</string>
    <string name="Submit">تقديم</string>

    <!-- Content -->
    <string name="ExoMark">كيف تقيم نفسك ؟</string>

    <!-- Units -->
    <string name="Unit1">الدوال</string>
    <string name="Unit2">المتتاليات</string>
    <string name="Unit3">الاعداد المركبة</string>
    <string name="Unit4">الهندسة في الفضاء</string>
    <string name="Unit5">الاحتمالات</string>
    <string name="Unit6">تقييمك</string>

    <!-- Font -->
    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_condensed">sans-serif-condensed</string>
    <string name="roboto_thin">sans-serif-thin</string>
    <string name="roboto_medium">sans-serif-medium</string>

    <string name="number_picker_formatter">%02d</string>
    <!--  Bar -->
    <string name="graph_bar_title">تقييم الوحدات</string>
    <string name="quest_bar_title">التمرينات</string>
    <string name="unit_bar_title">الوحدات</string>
    <string name="solution">solution</string>
    <string name="start">start</string>
    <string name="hint">hint</string>

</resources>
