<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:background="@color/colorWhite">

    <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/graph_height" android:id="@+id/unit5_title"
            android:textColor="@color/colorWhite" android:textSize="@dimen/unit_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@color/colorPrimary" android:text="@string/Unit5"
            app:layout_constraintTop_toBottomOf="@+id/unit4_title" android:layout_marginTop="@dimen/unit_midSpace"
            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="viewStart"
            android:gravity="start|center_vertical"/>
    <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="@dimen/graph_height" android:id="@+id/unit5_rating"
            android:scaleX="0.75" android:scaleY="0.75"
            android:isIndicator="true" android:rating="0"
            android:background="@color/colorPrimary" app:layout_constraintTop_toBottomOf="@+id/unit4_rating"
            android:layout_marginTop="@dimen/unit_midSpace"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/graph_height" android:id="@+id/unit4_title"
            android:textColor="@color/colorWhite" android:textSize="@dimen/unit_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@color/colorPrimary" android:text="@string/Unit4"
            app:layout_constraintTop_toBottomOf="@+id/unit3_title" android:layout_marginTop="@dimen/unit_midSpace"
            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="viewStart" android:gravity="center"/>
    <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="@dimen/graph_height" android:id="@+id/unit4_rating"
            android:scaleX="0.75" android:scaleY="0.75"
            android:isIndicator="true" android:rating="0"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/unit3_rating" android:layout_marginTop="@dimen/unit_midSpace"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/graph_height" android:id="@+id/unit3_title"
            android:gravity="center"
            android:textColor="@color/colorWhite" android:textSize="@dimen/unit_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@color/colorPrimary" android:text="@string/Unit3"
            app:layout_constraintTop_toBottomOf="@+id/unit2_title" android:layout_marginTop="@dimen/unit_midSpace"
            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="viewStart"/>
    <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="@dimen/graph_height" android:id="@+id/unit3_rating"
            android:scaleX="0.75" android:scaleY="0.75"
            android:isIndicator="true" android:rating="0"
            android:background="@color/colorPrimary" app:layout_constraintTop_toBottomOf="@+id/unit2_rating"
            android:layout_marginTop="@dimen/unit_midSpace"
            app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize" android:id="@+id/graph_bar"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
            android:layout_width="88dp"
            android:layout_height="48dp" app:srcCompat="@drawable/ic_backs"
            android:id="@+id/graph_icon" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="@+id/graph_bar"/>
    <TextView
            android:text="@string/graph_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/graph_title"
            android:textColor="@color/colorWhite" android:textSize="30sp"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@+id/graph_icon"
            android:layout_marginStart="36dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.192" app:layout_constraintBottom_toBottomOf="@+id/graph_bar"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/graph_height" android:id="@+id/unit1_title"
            android:gravity="center"
            android:textColor="@color/colorWhite" android:textSize="@dimen/unit_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@color/colorPrimary" android:text="@string/Unit1"
            app:layout_constraintTop_toBottomOf="@+id/graph_bar" android:layout_marginTop="@dimen/graph_margin"
            app:layout_constraintEnd_toEndOf="@+id/unit1_rating" android:textAlignment="viewStart"/>
    <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="@dimen/graph_height" android:id="@+id/unit1_rating"
            android:scaleX="0.75" android:scaleY="0.75"
            android:isIndicator="true" android:rating="0"
            android:background="@color/colorPrimary" app:layout_constraintTop_toBottomOf="@+id/graph_bar"
            android:layout_marginTop="@dimen/graph_margin"
            app:layout_constraintEnd_toEndOf="parent" android:layoutDirection="ltr"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/graph_height" android:id="@+id/unit2_title"
            android:gravity="center"
            android:textColor="@color/colorWhite" android:textSize="@dimen/unit_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@color/colorPrimary" android:text="@string/Unit2"
            app:layout_constraintTop_toBottomOf="@+id/unit1_title" android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/unit2_rating" android:textAlignment="viewStart"/>
    <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="@dimen/graph_height" android:id="@+id/unit2_rating"
            android:scaleX="0.75" android:scaleY="0.75"
            android:isIndicator="true" android:rating="0"
            android:background="@color/colorPrimary" app:layout_constraintTop_toBottomOf="@+id/unit1_rating"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>