<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <ImageView
            android:layout_width="@dimen/unit_width"
            android:layout_height="69dp"
            app:srcCompat="@android:drawable/ic_menu_edit"
            android:id="@+id/unit_icon6"
            android:background="@color/colorPrimary"
            app:layout_constraintStart_toEndOf="@+id/unit_icon5"
            android:tag="6"
            app:layout_constraintTop_toBottomOf="@+id/unit_title4"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="@dimen/unit_sideSpace"
            android:layout_marginRight="@dimen/unit_sideSpace"
            android:layout_marginLeft="@dimen/unit_sideSpace"
            android:layout_marginStart="96dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/Unit1"
            android:layout_width="@dimen/unit_width"
            android:layout_height="wrap_content" android:id="@+id/unit_title1"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/colorWhite" android:textSize="20sp"
            android:layout_marginLeft="@dimen/unit_sideSpace"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="@dimen/unit_sideSpace"
            android:layout_marginRight="@dimen/unit_sideSpace"
            android:tag="1"
            app:layout_constraintTop_toBottomOf="@+id/unit_icon1" android:background="@color/colorPrimary"
            android:layout_marginTop="8dp"/>
    <ImageView
            android:layout_width="@dimen/unit_width"
            android:layout_height="69dp" app:srcCompat="@android:drawable/ic_menu_edit"
            android:id="@+id/unit_icon1" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/unit_sideSpace" android:layout_marginStart="40dp"
            android:layout_marginTop="116dp"
            android:tag="1" android:background="@color/colorPrimary"/>
    <ImageView
            android:layout_width="@dimen/unit_width"
            android:layout_height="69dp"
            app:srcCompat="@android:drawable/ic_menu_edit"
            android:id="@+id/unit_icon5"
            android:tag="5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/unit_sideSpace"
            android:background="@color/colorPrimary"
            android:layout_marginStart="40dp"
            app:layout_constraintTop_toBottomOf="@+id/unit_title3" android:layout_marginTop="72dp"/>
    <TextView
            android:text="@string/Unit4"
            android:layout_width="@dimen/unit_width"
            android:layout_height="wrap_content"
            android:id="@+id/unit_title4"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/unit_icon4"
            app:layout_constraintStart_toEndOf="@+id/unit_title3"
            android:layout_marginEnd="@dimen/unit_sideSpace"
            android:layout_marginRight="@dimen/unit_sideSpace"
            android:tag="4"
            android:layout_marginLeft="@dimen/unit_sideSpace"
            android:layout_marginStart="92dp"
            android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.21"/>
    <ImageView
            android:layout_width="@dimen/unit_width"
            android:layout_height="69dp"
            app:srcCompat="@android:drawable/ic_menu_edit"
            android:id="@+id/unit_icon3"
            android:tag="3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/unit_sideSpace"
            android:background="@color/colorPrimary"
            android:layout_marginStart="40dp"
            app:layout_constraintTop_toBottomOf="@+id/unit_title1" android:layout_marginTop="60dp"/>
    <ImageView
            android:layout_width="@dimen/unit_width"
            android:layout_height="69dp"
            app:srcCompat="@android:drawable/ic_menu_edit"
            android:id="@+id/unit_icon2"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorPrimary"
            android:layout_marginTop="116dp"
            android:tag="2"
            app:layout_constraintStart_toEndOf="@+id/unit_icon1"
            android:layout_marginLeft="96dp"
            android:layout_marginStart="96dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/unit_sideSpace"
            android:layout_marginRight="@dimen/unit_sideSpace" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/Unit2"
            android:layout_width="@dimen/unit_width"
            android:layout_height="wrap_content"
            android:id="@+id/unit_title2"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/unit_icon2"
            android:tag="2"
            android:layout_marginEnd="@dimen/unit_sideSpace"
            android:layout_marginRight="@dimen/unit_sideSpace"
            android:background="@color/colorPrimary"
            app:layout_constraintStart_toEndOf="@+id/unit_title1"
            android:layout_marginLeft="92dp"
            android:layout_marginStart="92dp" android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.21"/>
    <TextView
            android:text="@string/Unit5"
            android:layout_width="@dimen/unit_width"
            android:layout_height="wrap_content"
            android:id="@+id/unit_title5"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_marginLeft="@dimen/unit_sideSpace"
            android:layout_marginStart="40dp"
            android:tag="5"
            app:layout_constraintTop_toBottomOf="@+id/unit_icon5" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/Unit3"
            android:layout_width="@dimen/unit_width"
            android:layout_height="wrap_content"
            android:id="@+id/unit_title3"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_marginLeft="@dimen/unit_sideSpace"
            android:tag="3"
            android:layout_marginStart="40dp"
            app:layout_constraintTop_toBottomOf="@+id/unit_icon3" android:layout_marginTop="8dp"/>
    <ImageView
            android:layout_width="@dimen/unit_width"
            android:layout_height="69dp"
            app:srcCompat="@android:drawable/ic_menu_edit"
            android:id="@+id/unit_icon4"
            android:background="@color/colorPrimary"
            android:tag="4"
            app:layout_constraintStart_toEndOf="@+id/unit_icon3"
            app:layout_constraintTop_toBottomOf="@+id/unit_title2"
            android:layout_marginStart="96dp"
            android:layout_marginEnd="@dimen/unit_sideSpace"
            android:layout_marginRight="@dimen/unit_sideSpace"
            android:layout_marginTop="60dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/Dashboard"
            android:layout_width="@dimen/unit_width"
            android:tag="6"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:id="@+id/unit_title6"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/unit_title5"
            android:layout_marginLeft="@dimen/unit_sideSpace"
            android:layout_marginEnd="@dimen/unit_sideSpace"
            android:layout_marginRight="@dimen/unit_sideSpace"
            android:layout_marginStart="92dp"
            app:layout_constraintTop_toBottomOf="@+id/unit_icon6" android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.21"/>
</androidx.constraintlayout.widget.ConstraintLayout>